Fix white outline flash in the dark mode

--- a/static/css/tom-select.hc.css
+++ b/static/css/tom-select.hc.css
@@ -5,6 +5,10 @@
     transition: none;
 }
 
+.ts-control:focus-visible {
+    outline: none;
+}
+
 .ts-control input {
     color: var(--input-color);
 }
